Fixed bug? on member card which incorrectly displayed a member's networks. Also removed justify text aligning for these networks.

--- a/myproject/inkle/static/css/memberCard.css
+++ b/myproject/inkle/static/css/memberCard.css
@@ -3,7 +3,6 @@
 .memberCard .memberNetworks
 {
     font-size: 14px;
-    text-align: justify;
     margin: -3px 0px 3px 0px;
 }
 
